<resources>
    <string name="app_name">Sigatoka Negra</string>
    <string name="title_activity_menu_principal">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="layoutSigatoka">¿Que es la Sigatoka?</string>
    <string name="layoutPrevenir">Como Prevenir y Combatir</string>
    <string name="layoutEstadios">Estadios del Sigatoka</string>
    <string name="layoutSennova">Que es Sennova</string>
    <string name="layoutRegional">Regional Casanare</string>
    <string name="layoutEstadio1">Sigatoka Negra Estadio 1</string>
    <string name="layoutEstadio2">Sigatoka Negra Estadio 2</string>
    <string name="layoutEstadio3">Sigatoka Negra Estadio 3</string>
    <string name="layoutEstadio4">Sigatoka Negra Estadio 4</string>
    <string name="layoutEstadio5">Sigatoka Negra Estadio 5</string>
    <string name="layoutEstadio6">Sigatoka Negra Estadio 6</string>
    <string name="estadio1">Es el primer síntoma externo de la enfermedad, las plantas afectadas por Sigatoka negra presentan puntos oscuros,
        café rojizo menor de 0,25 mm de longitud, visible a simple vista en el envés de las hojas, generalmente más abundante cerca del margen
        derecho de la hoja (vista de frente) y hacia el ápice. Esto se asemeja a la primera etapa de la Sigatoka amarilla.</string>
    <string name="estadio2">Las pizcas aumentan de tamaño en sentido longitudinal paralelas a la venación, formando estrías de 2 a 3 mm de
        longitud, de color café rojizo visibles primero en el envés y luego en el haz.</string>
    <string name="estadio3">Se distingue por la presencia de estrías o rayas con un tamaño mínimo de 5 mm, pudiendo alcanzar hasta 2 a 3 cm de largo.
        Las estrías conservan el color rojizo por el envés y toman color negro por el haz.</string>
    <string name="estadio4">Se caracteriza por la presencia de manchas elípticas u ovales que toman 25 un color café por el envés y negro por el haz.</string>
    <string name="estadio5">En este estado la mancha elíptica es totalmente negra en ambas caras de la hoja, aparece rodeada por un halo amarillo y
        presenta una “depresión” en el centro del tejido.</string>
    <string name="estadio6">La mancha está totalmente desarrollada; el área central hundida es de color gris y un borde de color café oscuro o negro
        forma un anillo bien definido alrededor de la mancha. Además, aparece un halo de color amarillo brillante alrededor de la lesión.
        Aun cuando la hoja esté muerta, la mancha persiste y el anillo oscuro que rodea la mancha también se mantiene bastante definido.</string>
    <string name="prevenir1">Manejo: la forma de frenar la diseminación de la bacteria, consiste en impedir su entrada a las plantas,
        por lo tanto, en las labores de deshoje, des guasque, destronque y desmeché, se deben evitar heridas al seudotallo. Además, una
        buena nutrición ayuda a la plantación a soportar el ataque de la enfermedad.</string>
    <string name="prevenir2">En plantaciones afectadas se recomienda la utilización de formol para desinfectar la herramienta, lo mismo que el sabletero.</string>
    <string name="control1">El control de la enfermedad se realiza mediante la erradicación de plantas enfermas, inyectando glifosato al 20%
        de 5 a 50 centímetros cúbicos de la solución, de acuerdo al tamaño de la planta</string>
    <string name="control2">Comprende todas aquellas prácticas que eviten o disminuyan la alta humedad relativa y la alta temperatura en la plantación.
        Dentro de éstas se tiene: construcción de drenajes adecuados, deshijes y deshojes continuos y control de malezas.</string>
    <string name="control3">Su objetivo es detener la producción de cuerpos fructíferos aun cuando haya ocurrido la infección.
        Sin embargo, cada día aumentan los riesgos de generación de resistencia por el uso continuado de algunos fungicidas, la agresividad de
        M. fijiensis y por el medio ambiente favorable a la enfermedad.</string>
    <string name="control4">Es uno de los factores de mayor importancia al establecer el cultivo, ya que guarda gran relación con la vida útil
        y calidad de la plantación, con la posibilidad de mecanización de ciertas labores, facilidad de cosecha y manejo de problemas fitosanitarios.
        Debe estar cerca a fuentes de agua, con vías de acceso y tener buenos drenajes o posibilidad de realizarlos.</string>
    <string name="control5">La preparación del terreno para la siembra de plátano depende de factores como la procedencia del lote a sembrar; sólo en el caso
        de potreros se justifica el empleo de maquinaria agrícola. Propiedades físicas del suelo como textura, estructura y la topografía del terreno</string>
    <string name="drenajes1">Los drenajes se deben realizar en regiones húmedas, donde la precipitación anual es alta y los suelos son planos o ligeramente
        ondulados. Su objetivo es la evacuación del exceso de agua que se encuentre bien sea en la superficie del suelo o a mayor profundidad, propiciando
        así buenas condiciones de aireación en la zona radicular. Algunos tipos de drenajes son los siguientes:</string>
    <string name="drenajes2">Tienen como función recoger y evacuar rápidamente las aguas provenientes de los canales secundarios y terciarios.
        Para su construcción o adecuación se puede aprovechar la mayor depresión del terreno, ríos, caños y quebradas.</string>
    <string name="drenajes3">Constituyen la base del sistema de drenajes. Su profundidad y frecuencia están determinados por la
        topografía y el nivel freático de los suelos</string>
    <string name="drenajes4">Depositan sus aguas en los canales secundarios. Sirven para mantener el nivel freático a una profundidad adecuada
        para las raíces, evacuan rápidamente las aguas superficiales evitando encharcamientos.</string>
    <string name="drenajes5">Se construyen en áreas pequeñas donde se producen encharcamientos para evacuar el agua superficie.</string>
    <string name="sigatoka1">La Sigatoka negra, causada por el hongo Mycosphaerella fijiensis, es la enfermedad foliar que representa
        la principal limitante en la producción de musáceas (plátano y banano) a nivel mundial. La enfermedad afecta el área foliar
        fotosintética de la planta y, en consecuencia, los racimos y los frutos tienen un menor peso en comparación con plantas sanas.
        Adicionalmente, infecciones severas de la Sigatoka negra causan la madurez prematura del fruto.</string>
    <string name="sigatoka2">Daños: Se presenta solo en el seudotallo y en cualquier estado de desarrollo de la planta. Se observan lesiones
        acuosas, de color amarillento al comienzo y café oscuro al final, de olor fétido característico; normalmente la enfermedad aparece en
        la parte media del seudotallo y avanza hacia el centro y hacia abajo deteniéndose al llegar al cormo. Como consecuencia de la obstrucción
        en los tejidos, las hojas se van amarillando, especialmente la central tomando posteriormente una coloración café oscuro hasta secarse
        totalmente. En el cormo aparece un área café pálido acuosa, rodeado por un halo de color negro. La enfermedad se transmite de una planta
        enferma a una sana principalmente durante el deshoje y desguasque, por medio de herramientas. Después de afectada la plantación se puede
        diseminar por la lluvia.</string>

</resources>
