<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEstadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CB11A"
                android:gravity="center"
                android:text="Estadio 1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/txtEstadio1.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadio1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEstadio1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Ver Imagenes del estadio 1"
                android:background="@drawable/boton_redondo"
                android:layout_gravity="center"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/txtEstadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CB11A"
                android:gravity="center"
                android:text="Estadio 2"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/txtEstadio2.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadio2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEstadio2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Ver Imagenes del estadio 2"
                android:background="@drawable/boton_redondo"
                android:layout_gravity="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtEstadio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CB11A"
                android:gravity="center"
                android:text="Estadio 3"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtEstadio3.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadio3"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEstadio3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Ver Imagenes del estadio 3"
                android:background="@drawable/boton_redondo"
                android:layout_gravity="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtEstadio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CB11A"
                android:gravity="center"
                android:text="Estadio 4"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtEstadio4.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadio4"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEstadio4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Ver Imagenes del estadio 4"
                android:background="@drawable/boton_redondo"
                android:layout_gravity="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtEstadio5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CB11A"
                android:gravity="center"
                android:text="Estadio 5"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtEstadio5.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadio5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEstadio5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Ver Imagenes del estadio 5"
                android:background="@drawable/boton_redondo"
                android:layout_gravity="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtEstadio6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4CB11A"
                android:gravity="center"
                android:text="Estadio 6"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txtEstadio6.1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estadio6"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEstadio6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Ver Imagenes del estadio 6"
                android:background="@drawable/boton_redondo"
                android:layout_gravity="center"
                android:textColor="#fff" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>